hid the site info

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -42,7 +42,7 @@
       <th colspan="3">Select</th>
     </tr>
   </thead>
-<%= @customer.sites.each do |site| %>
+<% @customer.sites.each do |site| %>
 <tbody>
       <tr>
         <td><%= site.id %></td>
