--- a/app/views/circuits/edit.html.erb
+++ b/app/views/circuits/edit.html.erb
@@ -1,6 +1,9 @@
 <h1>Editing Circuit</h1>
 
-<%= render 'form' %>
+<%#= link_to 'Show', @circuit %>
+<%#= link_to 'Back', circuits_path %>
+<br>
 
-<%= link_to 'Show', @circuit %> |
-<%= link_to 'Back', circuits_path %>
+<%= render 'form_edit' %>
+
+
