--- a/app/views/circuits/index.html.erb
+++ b/app/views/circuits/index.html.erb
@@ -1,12 +1,16 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to 'New Circuit', new_circuit_path %>
+<br>
+
+<div>
 <h1>Listing Circuits</h1>
 
 <table>
   <thead>
     <tr>
       <th>Id</th>
-      <th>Type</th>
+      <th>Category</th>
       <th>Speed</th>
       <th>Carrier</th>
       <th>Site</th>
@@ -18,18 +22,16 @@
     <% @circuits.each do |circuit| %>
       <tr>
         <td><%= circuit.id %></td>
-        <td><%= circuit.type %></td>
+        <td><%= circuit.category %></td>
         <td><%= circuit.speed %></td>
         <td><%= circuit.carrier %></td>
         <td><%= circuit.site %></td>
-        <td><%= link_to 'Show', circuit %></td>
-        <td><%= link_to 'Edit', edit_circuit_path(circuit) %></td>
-        <td><%= link_to 'Destroy', circuit, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="edit"><%= link_to 'Show', circuit %></td>
+        <td class="edit"><%= link_to 'Edit', edit_circuit_path(circuit) %></td>
+        <td class="edit"><%= link_to 'Destroy', circuit, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+</div>
 
-<br>
-
-<%= link_to 'New Circuit', new_circuit_path %>
