--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -12,22 +12,18 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %><br>
-    <%= form.text_field :name %>
-  </div>
-  <div class="field">
-    <%= form.label :contact %><br>
-    <%= form.text_field :contact %>
-  </div>
-  <div class="field">
-    <%= form.label :phone %><br>
-    <%= form.text_field :phone %>
-  </div>
-  <div class="field">
-    <%= form.label :email %><br>
-    <%= form.text_field :email %>
-  </div>
-  <div class="actions">
+    <%= form.label :name %>
+    <%= form.text_field :name %><br>
+
+    <%= form.label :contact %>
+    <%= form.text_field :contact %><br>
+
+    <%= form.label :phone %>
+    <%= form.text_field :phone %><br>
+
+    <%= form.label :email %>
+    <%= form.text_field :email %><br>
+
     <%= form.submit %>
   </div>
 <% end %>
