--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,41 +13,87 @@
  *= require_tree .
  *= require_self
  */
-table{
-   	border:2px solid #B4C1FF;
-   	margin-top: 1em;
-   	width: 50%;
+
+/* Application----------------------------------------------------------------*/
+div{
+    width: 48%;
+    float: left;
+    padding: 1em;
 }
 
-table tr td {
-    min-width: 10px;
-    padding: 5px;
-    border:1px solid #00308f;
-    border-radius:5px;
-    text-align:center;
-    font-size: 10px;
+.right{
+    float: right;
 }
 
-thead{
+a[href]{
+    color: black;
+    background-color: #d9d9d9;
+    border-radius: 3px;
+    border:1px solid black;
+    padding: 1px;
+    text-decoration:  none;
+}
+
+a[href]:hover {
+    color: white;
+    background-color: black;
+}
+  
+/* Tables---------------------------------------------------------------------*/
+.item{
     text-align:center;
-    font-size: 12px;
+    font-size: 13px;
     background:#00308f;
     color:#fff;
 }
 
-thead th{
-    padding:1px;
+.edit{
+    background-color: #f1f1f1;
+    color: #333;
+    font-family: verdana, arial, helvetica, sans-serif;
+    font-size: 13px;
 }
 
-/*Form*/
+table{
+   	width: 100%;
+}
+
+table tr td {
+    text-align:center;
+    border:2px solid #B4C1FF;   
+    padding: 1px;
+    font-size: 13px;
+    line-height: 18px;
+}
+
+thead{
+    text-align:center;
+    font-size: 13px;
+    background:#00308f;
+    color:#fff;
+    border:2px solid #B4C1FF;
+}
+
+thead th{
+    padding:1px;
+    border:2px solid #B4C1FF;
+}
+
+/*Forms-----------------------------------------------------------------------*/
+
+form {
+    display: block;
+}
+
 input {
-    width: 50%;
+    width: 78%;
+    padding: 1px;
+    font-size: 13px;
+    line-height: 18px;
 }
 
 input[type=text] {
-    width: 50%;
-    padding: 12px 20px;
-    margin: 8px 0;
+    border:2px solid #B4C1FF;
     box-sizing: border-box;
 }
 
@@ -55,25 +101,42 @@ input[type=text]:focus {
     border: 3px solid #555;
 }
 
-select {
-    width: 50%;
-    padding: 16px 20px;
-    border: none;
-    border-radius: 4px;
-    background-color: #f1f1f1;
+input[type=submit] {
+    width: 20%;
+    color: black;
+    background-color: #d9d9d9;
+    border-radius: 3px;
+    border:1px solid black;
+    padding: 1px;
 }
 
-/*Forms*/
+input[type=submit]:hover {
+    color: white;
+    background-color: black;
+}
+
+select {
+    width: 20%;
+    color: black;
+    background-color: #d9d9d9;
+    border-radius: 3px;
+    border:1px solid black;
+    padding: 1px;
+}
+
+select:hover {
+    color: white;
+    background-color: black;
+}
 
 label {
-    padding:1px;
-    width:50%;
+    width: 20%;
+    border:2px solid #B4C1FF;
+    padding: 1px;
+    box-sizing: border-box;
     display: inline-block;
     text-align:center;
-    font-size: 12px;
     background:#00308f;
     color:#fff;
-    border:2px solid #B4C1FF;
-   	margin-top: 1em;
 }
-  
+
