--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,6 +1,8 @@
+<%= link_to 'Show Customer Sites', @customer %> |
+<%= link_to 'Back', customers_path %>
+<br>
+
 <h1>Editing Customer</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @customer %> |
-<%= link_to 'Back', customers_path %>
