--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,5 +1,12 @@
 <p id="notice"><%= notice %></p>
 
+
+<% if current_user.admin? %>
+<%= link_to 'New Customer', new_customer_path %>
+<% end %>
+<br>
+
+<div>
 <h1>Listing Customers</h1>
 
 <table>
@@ -22,17 +29,14 @@
         <td><%= customer.contact %></td>
         <td><%= customer.phone %></td>
         <td><%= customer.email %></td>
-        <td><%= link_to 'Show', customer %></td>
-        <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
+        <td class="edit"><%= link_to 'Show', customer %></td>
+        <td class="edit"><%= link_to 'Edit', edit_customer_path(customer) %></td>
         <% if current_user.admin? %>
-        <td><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="edit"><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-<% if current_user.admin? %>
-<%= link_to 'New Customer', new_customer_path %>
-<% end %>
+</div>
