--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,23 +1,15 @@
-<div class="row">
-  <div class="col-sm-4 col-sm-offset-4">
+    <%= render "devise/shared/links" %> |
+    
     <h2 class="text-center">Resend confirmation instructions</h2>
-
+    
+<div>
     <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
       <%= devise_error_messages! %>
 
-      <div class="form-group">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, class: 'form-control', value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
-      </div>
+        <%= f.label :email %>
+        <%= f.email_field :email, autofocus: true, class: 'form-control', value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %><br />
+        <%= f.submit "Resend confirmation instructions", class: 'btn btn-primary btn-lg btn-block' %><br />
 
-      <div class="actions">
-        <%= f.submit "Resend confirmation instructions", class: 'btn btn-primary btn-lg btn-block' %>
-      </div>
     <% end %>
 
-    <div class="text-center">
-      <%= render "devise/shared/links" %>
-    </div>
-
-  </div>
 </div>
