--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,45 +1,38 @@
-<div class="row">
-  <div class="col-sm-4 col-sm-offset-4">
+
     <h1>Edit <%= resource_name.to_s.humanize %></h1>
     <hr>
+<div>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
 
-      <div class="form-group">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, class: 'form-control'  %>
-      </div>
+        <%= f.label :email %>
+        <%= f.email_field :email, class: 'form-control'  %><br />
 
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        Currently waiting confirmation for: <%= resource.unconfirmed_email %>
       <% end %>
 
-      <div class="form-group">
-        <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-        <%= f.password_field :password, autocomplete: "off", class: 'form-control'  %>
-      </div>
+        <%= f.label :password %> 
+        <%= f.password_field :password, autocomplete: "off", class: 'form-control' %><br />
+        <i>(leave blank if you don't want to change it)</i><br />
 
-      <div class="form-group">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'  %>
-      </div>
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'  %><br />
 
-      <div class="form-group">
-        <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-        <%= f.password_field :current_password, autocomplete: "off", class: 'form-control'  %>
-      </div>
+        <%= f.label :current_password %>
+        <%= f.password_field :current_password, autocomplete: "off", class: 'form-control'  %><br />
+        <i>(we need your current password to confirm your changes)</i><br />
 
-      <div class="form-group">
         <%= f.submit "Update", class: 'btn btn-lg btn-block btn-primary' %>
-      </div>
+
     <% end %>
     <hr>
-
+<% if current_user.admin? %>
     <h2>Cancel my account</h2>
 
     <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), class: "btn btn-danger", data: { confirm: "Are you sure? You cannot undo this." }, method: :delete %></p>
-
+        <% end %>
     <%= link_to "Back", :back %>
     <hr>
-  </div>
+
 </div>
