--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,14 @@
+<%= render "devise/shared/links" %>
 <h2>Resend unlock instructions</h2>
-
+<div>
 <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
-  </div>
 
-  <div class="actions">
     <%= f.submit "Resend unlock instructions" %>
-  </div>
+</div>
 <% end %>
 
 <%= render "devise/shared/links" %>
