--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,6 +19,9 @@
         <%= f.label :password_confirmation %>
         <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %><br />
 
+        <%= f.label :customer_id %>
+        <%= f.collection_select(:customer_id, Customer.all, :id, :name, {:prompt => 'Select a Customer', :selected => @user.customer}) %><br />
+
         <%= f.submit "Sign up", class: "btn btn-primary btn-block btn-lg" %>
 
     <% end %>
